# FEM-A

./: .gitignore  README.md
OptionX/: AmericanPayoff.h  AsianPayoff.h  BlackScholes.cpp  BlackScholes.h  ConvectionDiffusion.h  ConvectionDiffusionEulerExplicit.cpp  ConvectionDiffusionEulerExplicit.h  ConvectionDiffusionEulerImplicit.cpp  FEMInterface.cpp  Hyperbolic.h  Option.h  OptionX.pro  Payoff.h  PowerPayoff.h  americanpayoff.cpp  feminterface.h  main.cpp  optionx.cpp  optionx.h  optionx.ui
OptionX/FEM-A-master/src/FEM/Options/: AsianPayoff.h  EuropeanPayoff.cpp
OptionX/FEM-A-master/src/FEM/PDEs/: BlackScholes.cpp  BlackScholes.h  Hyperbolic.cpp
OptionX/FEM-A-master/src/FEM/Solvers/: ConvectionDiffusionEulerExplicit.cpp
OptionX/FEM-A-master/src/Scraper/: DataFrame.h
release/: instructions.md
src/FEM/: FEMInterface.cpp
src/FEM/Options/: AmericanPayoff.h  AsianPayoff.h  CMakeLists.txt  EuropeanPayoff.h  Option.h  Payoff.h  PowerPayoff.h
src/FEM/PDEs/: AsianBlackScholes.h  BlackScholes.h  CMakeLists.txt  ConvectionDiffusion.h  Hyperbolic.h
src/FEM/Solvers/: CMakeLists.txt  ConvectionDiffusionEulerExplicit.cpp  ConvectionDiffusionEulerExplicit.h  ConvectionDiffusionEulerImplicit.cpp  ConvectionDiffusionEulerImplicit.h  ConvectionDiffusionFEMBase.h
src/Scraper/: Scraper.cpp  Scraper.h
